@@ -2,6 +2,7 @@ cm4all-myproxy (0.14) unstable; urgency=low
 
   * accept OK packet with `info` field missing
   * send ERR to client when connection to server fails
+  * implement auth plugin "caching_sha2_password" (incomplete, no RSA support)
 
  --   
 
